syntax = "proto2";

package eflect.sample.proto;

message StackTraceSample {
  required int64 timestamp = 1;
  required int64 call_count = 2;
  required int64 thread_id = 3;
  repeated int64 stack_trace_id = 4;
}
